# bridgex

./: .gitignore  .prettierrc  .prettierrc.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  index.html  pyproject.toml  requirements.md  requirements.txt
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 🐍-bug-report.md
.github/workflows/: build-publish.yml  deploy.yml
bridgex/: .env  Cargo.toml  build.rs  package.json  pnpm-lock.yaml  vite.config.ts
bridgex/src/: App.css  App.tsx  main.rs  main.tsx
bridgex/src-tauri/: Cargo.toml  tauri.conf.json
bridgex/src-tauri/src/: lib.rs  main.rs
bridgex/src/assets/css/: DefaultLayout.css  Footer.css  LanguageSelector.css  LoadFile.css  MenuBar.css
bridgex/src/assets/licenses/: license_slint.txt
bridgex/src/components/: Footer.tsx  LanguageSelector.tsx  LoadFile.tsx  MenuBar.tsx
bridgex/src/components/MenuBarDialogs/: FileOptions.tsx  HelpOptions.tsx  SettingsOptions.tsx
bridgex/src/layouts/: Default.tsx
bridgex/src/pages/: About.tsx  Home.tsx
bridgex/src/ts/: Constants.ts  Utils.ts
bridgex/ui/: app-window.slint  constants.slint
bridgex/ui/components/: h1.slint  h2.slint  h3.slint
bridgex/ui/dialogs/: license.slint
bridgex/ui/popups/: about.slint
bridgex/ui/values/: constants.slint  globals_variables.slint
python/bridgex/: __main__.py
src/PYMD/: __init__.py  __main__.py  _bridge.py  _converter.py  _files_manager.py  _pymd.py  _returning.py
src/PYMD/database/: Manager.py  _db.py  config.db
src/PYMD/db_manager/: db_manage.py
src/PYMD/interface/: _about.py  _initialHelp.py  _interface.py  _lang.py  _osl.py  dialog_about.ui  dialog_language.ui  main_window.ui  osl.ui  pymd.pyproject  resources.qrc  ui_dialog_about.py  ui_dialog_language.py  ui_main_window.py  ui_osl.py
src/PYMD/interface/translations/: pymd_es_CO.qm  pymd_es_CO.ts
src/PYMD/interface/translations/locale/: bridge_en_GB.ts  bridge_es_CO.qm  bridge_es_CO.ts  pymd_en_GB.qm  pymd_en_GB.ts
src/PYMD/interface/translations/others/: ABOUT_en_GB.trg  ABOUT_es_CO.trg  IH_en_GB.srm  IH_es_CO.srm
src/PYMD/logic/: Converter.py
src/PYMD/utils/: FilesManager.py
src/bridge/interface/: _initialHelp.py  _interface.py  dialog_language.ui  main_window.ui  osl.ui  resources.qrc  ui_dialog_about.py  ui_dialog_language.py  ui_main_window.py  ui_osl.py
src/bridge/interface/translations/locale/: bridge_es_GB.ts
src/bridge/interface/translations/others/: ABOUT_en_GB.trg  ABOUT_es_CO.trg
src/bridgex/: Cargo.toml  __init__.py  _bridgex.py
src/bridgex/interface/: dialog_about.ui  dialog_language.ui  main_window.ui  osl.ui  resources.qrc
src/bridgex/interface/translations/others/: ABOUT_en_GB.trg  ABOUT_es_CO.trg
src/bridgex/src/: app.rs  book.rs  fileconverter.rs  hello_world.rs  html.rs  interactive.rs  link_hooks.rs  macros.rs  main.rs  mixing.rs  show_mut.rs  theme.rs
src/bridgex/src/assets/: test.md
src/bridgex/src/assets/licenses/: license_markitdown-rs.txt
src/bridgex/src/components/: popup.rs
src/bridgex/src/logic/: converter.rs
src/bridgex/src/markdown/: hello_world.md
src/bridgex/src/ui/: about.rs  licenses.rs  llm.rs  menu.rs  mod.rs  popup.rs
src/bridgex/src/utils/: constants.rs  files.rs  helpers.rs  llm_config.rs  mod.rs
src/components/layout/: Footer.css  Footer.tsx  Layout.css
src/components/sections/: ScreenshotsSection.tsx
src/i18n/locales/: fr.json  ja.json  ru.json
src/pages/: DocumentationPage.tsx  DownloadsPage.css  LicensesPage.css  LicensesPage.tsx
tests/: _interface.py  first-py.pyproject  form.ui  ui_form.py
translations/: README_ES.md  requirements_es.md
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  main.tsx
website/src/components/layout/: Footer.css  Footer.tsx  Layout.tsx  Navbar.css  Navbar.tsx
website/src/components/sections/: CTASection.css  CTASection.tsx  FeaturesSection.css  FeaturesSection.tsx  HeroSection.css  HeroSection.tsx  ScreenshotsSection.css  ScreenshotsSection.tsx
website/src/contexts/: ThemeContext.tsx
website/src/data/: licenses.ts
website/src/i18n/: index.ts
website/src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  pt.json  ru.json  zh.json
website/src/pages/: AboutPage.css  AboutPage.tsx  DocumentationPage.css  DocumentationPage.tsx  DownloadsPage.tsx  HomePage.tsx  LicensesPage.tsx
website/src/styles/: global.css
