[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgex"
version = "0.2.0"
description = "Graphical interface for converting files to Markdown, built in Tauri + React and Markitdown."
readme = { file = "README.md", content-type = "text/markdown", charset = "utf-8" }
license = "MIT"
authors = [{ name = "dev2forge", email = "dev2forge@gmail.com" }]
maintainers = [{ name = "tutosrive", email = "tutosriveorg@gmail.com" }]

keywords = [
    "markdown",
    "converter",
    "tauri",
    "react",
    "gui",
    "editor",
    "viewer",
    "pdf",
    "docx",
    "pptx",
    "xls",
    "xlsx",
    "outlook",
    "csv",
    "txt",
    "html",
    "htm",
    "file converter",
    "markdown converter",
    "markitdown",
    "dev2forge",
    "bridgex",
    "microsoft office"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X"
]

[project.scripts]
bridgex = "bridgex.__main__:main"

[project.urls]
Homepage = "https://github.com/Dev2Forge/bridgex"
Repository = "https://github.com/Dev2Forge/bridgex"
Issues = "https://github.com/Dev2Forge/bridgex/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }