[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgex"
version = "0.2.0"
description = "Open-source desktop app for converting files to Markdown, built in Rust with Freya and Markitdown."
readme = { file = "README.md", content-type = "text/markdown", charset = "utf-8" }
license = "GPL-3.0-only"
authors = [{ name = "dev2forge", email = "bridgex@dev2forge.software" }]
maintainers = [{ name = "tutosrive", email = "tutosrive@dev2forge.software" }]

keywords = [
    "markdown",
    "converter",
    "gui",
    "editor",
    "viewer",
    "rust",
    "pdf",
    "docx",
    "pptx",
    "xls",
    "xlsx",
    "csv",
    "txt",
    "html",
    "htm",
    "file converter",
    "markdown converter",
    "markitdown",
    "dev2forge",
    "bridgex"
]

dependencies = []
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X"
]

[project.scripts]
bridgex = "bridgex.__main__:main"

[project.urls]
Homepage = "https://github.com/Dev2Forge/bridgex"
Repository = "https://github.com/Dev2Forge/bridgex"
Issues = "https://github.com/Dev2Forge/bridgex/issues"

[tool.setuptools]
package-dir = {"" = "python"}
packages = { find = { where = ["python"] } }

[tool.setuptools.package-data]
bridgex = [
    "bin/*",
    "bin/**"
]