[package]
name = "bridgex"
version = "0.2.0"
edition = "2021"
authors = ["tutosrive"]
description = "An open-source graphical interface for converting files to Markdown, built in Python with PySide6. Simplify your workflow with the power of Markitdown."
# include = ["src/assets/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.17.2"
slint = "1.16.1"

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "s"

[profile.dev]
incremental = true
opt-level = 0
debug = 1   # reduce tamaño de debug info (default es 2)