[package]
name = "bridgex"
version = "0.2.0"
edition = "2024"

[dependencies]  
freya = { version = "=0.4.0-rc.19", features = ["markdown", "code-editor", "skia-engine"], default-features = false}  
markitdown = "0.1.11"
rfd = "0.17.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "unwind"
strip = true
debug = false
overflow-checks = false
debug-assertions = false
incremental = false

[profile.dev]
incremental = true
opt-level = 0
codegen-units = 16
debug = 0
strip = false

[features]
dev = ["freya/devtools"]