[package]
name = "bridgex"
version = "0.2.0"
edition = "2024"
description = "Open-source desktop app for converting files to Markdown, built in Rust with Freya and Markitdown."
license = "GPL-3.0-only"
repository = "https://github.com/Dev2Forge/bridgex"
homepage = "https://bridgex.pages.dev/"
documentation = "https://bridgex.pages.dev/"
readme = "README.md"
authors = ["tutosrive <tutosriveorg@gmail.com>", "dev2forge <dev2forge@gmail.com>"]
keywords = ["markdown", "freya", "converter", "gui", "office"]
categories = ["gui", "text-processing", "parser-implementations"]

[dependencies]  
freya = { version = "=0.4.0-rc.19", features = ["markdown", "code-editor", "skia-engine"], default-features = false}  
markitdown = "0.1.11"
rfd = "0.17.2"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "1.2.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "unwind"
strip = true
debug = false
overflow-checks = false
debug-assertions = false
incremental = false

[profile.dev]
incremental = true
opt-level = 0
codegen-units = 16
debug = 0
strip = false

[features]
dev = ["freya/devtools"]
